[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lib = { path = "../lib" }
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
